[package]
name = "pegasus_astro"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/devDucks/pegasus-rs/"
readme = "README.md"
description = "Multiplatform drivers for PegasusAstro equipment with a bit of gRPC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
serialport = "4.1"
log = "0.4"
env_logger = "0.9"
lightspeed-astro = "0.6"
astrotools = "0.3"
tonic = "0.7"
tonic-reflection = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-serial = "5.4"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
]

