[package]
name = "pegasus_astro"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/devDucks/pegasus-rs/"
readme = "README.md"
description = "Multiplatform drivers for PegasusAstro equipment with a bit of gRPC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
serialport = "4.3"
log = "0.4"
env_logger = "0.11"
astrotools = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "tracing"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
rumqttc = "0.24"

[dependencies.uuid]
version = "1"
features = [
    "v5",
    "fast-rng",
]

[profile.release]
debug = true
