[package]
name = "ppba-lightspeed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ppba-lightspeed"
path = "src/main.rs"

[[bin]]
name = "ppba-test"
path = "test_app.rs"

[dependencies]
astrotools = "0.11.0"
env_logger = "0.11.10"
libpegasus = { path = "../libpegasus" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.uuid]
version = "1.23"
features = [
    "v4",
    "v5",
    "fast-rng",
]